src/styles/main.css
:root,
.light-mode {
  --main-bg-color: white;
  --main-color: rgb(127, 127, 127);
  --main-eee: #eee;
  --main-links: rgba(0, 0, 0, 0.5);
  --main-links-on: rgba(0, 0, 0, 0.8);
  --main-home-bg-color: aliceblue;

  --main-link-bg: #eee;
}

.dark-mode {
  /* @media (prefers-color-scheme: dark) { */
  --main-bg-color: rgb(28 28 36);
  --main-color: rgb(208, 205, 205);
  --main-eee: #eee;
  --main-links: rgba(255, 255, 255, 0.5);
  --main-links-on: rgba(255, 255, 255, 0.8);
  --main-home-bg-color: rgb(39, 39, 55);

  --main-link-bg: #100b0b;
}

.vanished {
  transform: scale(0);
}

.dark-mode h4 {
  color: #78d9a6;
}

.dark-mode .work-item h4,
.dark-mode .education-item h4 {
  color: burlywood;
}

html,
body {
  background-color: var(--main-bg-color);
  transition: background-color 0.3s ease;
}

.dark-mode-div {
  width: 1.6rem;
  height: 1.6rem;
  cursor: pointer;
  /* background-color: red; */
  background-position: center;
  background-size: cover;
}
.dark-mode-div.light {
  background-image: url("../img/city-night.png");
}
.dark-mode-div.dark {
  background-image: url("../img/city-sun.png");
}
/* body {
  transition: background-color 0.2s ease;
} */

* {
  font-size: 0.9rem;
  box-sizing: border-box;
  color: var(--main-color);
  transition: color 0.2s ease;
}

.dark-mode-button {
  cursor: pointer;
  font-size: 1rem;
  background: none;
  border: none;
  outline: none;
}

.mobile-version-placeholder {
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.mobile-version-placeholder > * {
  margin: 1rem 0;
}

.mobile-version-placeholder > a {
  background-color: var(--main-eee);
  transition: background-color 0.2s ease;
  padding: 1rem;
  border-radius: 0.3rem;
  margin-bottom: 0;
}

.switch-wrapper {
  position: relative;
}

.switch-wrapper > div {
  position: absolute;
}

.header {
  width: 100vw;
  background-color: transparent;
  padding: 1rem;
  height: 3rem;
  /* background-color: red; */
}

.header .navigation {
  width: 100vw;
  justify-content: space-between;
  align-items: center;
}

.header .navigation a {
  color: var(--main-links);
  transition: color 0.2s ease;

  margin-right: 0.5rem;
  transition: all 0.2s ease;
}
.header .navigation a:hover {
  color: var(--main-links-on);
  transition: color 0.2s ease;
}
.header .navigation a.selected {
  color: var(--main-links-on);
  transition: color 0.2s ease;
}

.header .navigation > .row > div {
  padding: 0 0.5rem;
  /* opacity: 0.5; */
  /* cursor: pointer; */
  position: relative;
  /* font-variant: small-caps; */
}

.header .navigation > .row {
  align-items: center;
}

/* .header .navigation > .row > div {
  border-right: solid 1px rgba(0, 0, 0, 0.8);
}
.header .navigation > .row > div:last-of-type {
  border-right: none;
} */

.header .title {
  align-items: center;
}
.header .title p {
  text-align: center;
}
.header .title .picture {
  width: 3rem;
  height: 3rem;
  background-color: #ddd;
  border-radius: 50%;
  margin-right: 1rem;
  background-image: url("../img/me.png");
  background-size: cover;
}

.about-pic {
  width: 8rem;
  height: 8rem;
  background-color: #ddd;
  border-radius: 50%;
  margin-bottom: 2rem;
  background-image: url("../img/me.png");
  background-size: cover;
}
.header .title .row {
  align-items: center;
  margin-bottom: 1rem;
}

.header .title h1 {
  /* font-weight: 400; */
  margin-right: 0.5rem;
  font-size: 1rem;
  font-weight: bold;
}

.col {
  display: flex;
  flex-direction: column;
}
.row {
  display: flex;
  flex-direction: row;
}

.cv-container,
.contact-container,
.about-container {
  width: 100vw;
  flex: 1;
  padding: 1rem 1rem 0 1rem;
}

.text-content {
  width: 70%;
  margin: auto;
  /* height: 80vh; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.text-content p {
  margin-bottom: 2rem;
}

.cv-container > .col > div {
  /* background-color: #eee; */
  margin-right: 0.5rem;
  overflow-y: scroll;
  padding: 1rem 2rem 0rem 2rem;
  height: 100%;
}

.cv-container > .col:nth-of-type(even) > div {
  /* background-color: #eee; */
}
.cv-container > .col:nth-of-type(2) > div {
  /* padding: 0; */
}
/* 
.cv-container > .col > div > .content {
  min-height: auto;
  border-right: dashed 1px rgb(127, 127, 127);
} */

.cv-container > .col > div::-webkit-scrollbar {
  display: none;
}
.cv-container > .col {
  height: calc(
    100vh - 4rem
  ); /* full screen height - header height - 2 x paddings */
}
.cv-container > div:first-of-type {
  flex: 2;
}
.cv-container > div:nth-of-type(2) {
  flex: 5;
}
.cv-container > div:last-of-type {
  flex: 3;
  margin-right: 0;
}

.cv-container h4 {
  margin-bottom: 1rem;
  font-variant: small-caps;
  width: 100%;
  /* text-align: center; */
}

.cv-skills-column ul {
  margin-bottom: 2rem;
  list-style: none;
  padding: 0;
  /* border-right: dashed 1px rgb(127, 127, 127); */
}

/* .cv-skills-column ul:first-of-type {
  color: orange;
}
.cv-skills-column ul:nth-of-type(2) {
  color: blue;
} */

.cv-skills-column ul li {
  font-variant: small-caps;
  padding: 0.15rem 0;
  position: relative;
  cursor: default;
  transition: all 0.2s ease;
}

.cv-skills-column ul:first-of-type li:hover::before {
  width: 100%;
  content: "";
  position: absolute;
  height: 100%;
  top: 0;
  left: -0.3rem;
  border-radius: 0.3rem;
  background-color: lemonchiffon;
  z-index: -2;
  opacity: 0.5;
}

.skill-levelbar {
  position: absolute;
  top: 0;
  left: -0.3rem;
  border-radius: 0.3rem 0 0 0.3rem;
  height: 100%;
  z-index: -1;
  background-color: rgb(174, 242, 174);
  opacity: 0.5;
}

.work-item {
  background-color: var(--main-bg-color);
  transition: background-color 0.2s ease;

  padding: 0.8rem;
  border-bottom: solid 1px var(--main-eee);
  position: relative;
  transition: all 0.2s ease;

  /* margin-bottom: 0.5rem; */
}
.work-item:hover {
  background-color: rgba(238, 238, 238, 0.2);
}
.work-item:last-of-type {
  border-bottom: none;
  margin-bottom: 2rem;
}
/* ... */

